# Oria

./: .editorconfig  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
demo/: app.py
docs/: AI_LABELING_GUIDE.md  DEVELOPMENT.md  REMOVE_PREVIEW_CACHE.md
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/core/: annotation.rs  cache.rs  image.rs  labels.rs  mod.rs
src-tauri/src/export/: coco.rs  yolo.rs
src-tauri/src/inference/: api_client.rs  mod.rs  model_inference.rs  onnx_inference.rs
src-tauri/src/ui/: file_dialog.rs  image_loader.rs  mod.rs
src/components/: AnnotationCanvas.vue  AutoLabelDialog.vue  FileList.vue  InferenceSettings.vue  KeyboardHelp.vue  PropertyPanel.vue  ToolBar.vue
src/utils/: annotation.js  history.js  keyboard.js
